basic ruby rake job

--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -7,12 +7,8 @@
 
 name: Ruby
 
-on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
-
+on: [push, pull_request]
+    
 jobs:
   test:
 
