--- a/.github/workflows/danger.yml
+++ b/.github/workflows/danger.yml
@@ -7,8 +7,8 @@ jobs:
       - uses: actions/checkout@v2
       - uses: ruby/setup-ruby@v1
         with:
-          ruby-version: 2.7.5 # Not needed with a .ruby-version file
-          bundler-cache: true # runs 'bundle install' and caches installed gems automatically
+          ruby-version: 2.7.5 
+          bundler-cache: true
       - run: |
         # the personal token is public, this is ok, base64 encode to avoid tripping Github
         TOKEN=$(echo -n NWY1ZmM5MzEyMzNlYWY4OTZiOGU3MmI3MWQ3Mzk0MzgxMWE4OGVmYwo= | base64 --decode)
