--- a/.github/workflows/danger.yml
+++ b/.github/workflows/danger.yml
@@ -1,5 +1,8 @@
 name: Rake on PR
 on: [push, pull_request]
+env:
+  # the personal token is public, this is ok, base64 encode to avoid tripping Github
+  DANGER_TOKEN: $(echo -n NWY1ZmM5MzEyMzNlYWY4OTZiOGU3MmI3MWQ3Mzk0MzgxMWE4OGVmYwo= | base64 --decode)
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -7,9 +10,9 @@ jobs:
       - uses: actions/checkout@v2
       - uses: ruby/setup-ruby@v1
         with:
-          ruby-version: 2.7.5 
+          ruby-version: 2.7.5
           bundler-cache: true
-      - run: |
-        # the personal token is public, this is ok, base64 encode to avoid tripping Github
-        TOKEN=$(echo -n NWY1ZmM5MzEyMzNlYWY4OTZiOGU3MmI3MWQ3Mzk0MzgxMWE4OGVmYwo= | base64 --decode)
-        DANGER_GITHUB_API_TOKEN=$TOKEN bundle exec danger --verbose
+      - name: Run Danger
+        run: DANGER_GITHUB_API_TOKEN=$DANGER_TOKEN bundle exec danger --verbose
+        env:
+          DANGER_GITHUB_API_TOKEN: $(echo -n NWY1ZmM5MzEyMzNlYWY4OTZiOGU3MmI3MWQ3Mzk0MzgxMWE4OGVmYwo= | base64 --decode)
