--- a/spec/fixtures/strava/client/activity_comments.yml
+++ b/spec/fixtures/strava/client/activity_comments.yml
@@ -1,142 +1,76 @@
 ---
 http_interactions:
-- request:
-    method: get
-    uri: https://www.strava.com/api/v3/activities/1946417534/comments
-    body:
-      encoding: US-ASCII
-      string: ''
-    headers:
-      Authorization:
-      - Bearer access-token
-      Accept:
-      - application/json; charset=utf-8
-      User-Agent:
-      - Strava Ruby Client/0.5.0
-      Accept-Encoding:
-      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
-  response:
-    status:
-      code: 403
-      message: Forbidden
-    headers:
-      Content-Type:
-      - application/json; charset=utf-8
-      Transfer-Encoding:
-      - chunked
-      Connection:
-      - keep-alive
-      Date:
-      - Tue, 02 Aug 2022 08:55:24 GMT
-      Via:
-      - 1.1 linkerd, 1.1 linkerd, 1.1 dde0b4b1e223fa23670e93078a04c116.cloudfront.net
-        (CloudFront)
-      Vary:
-      - Origin
-      Server:
-      - nginx/1.21.3
-      Status:
-      - 403 Forbidden
-      X-Request-Id:
-      - 0f2c2817-e300-4d5f-8c4f-3c66207e3b98
-      Cache-Control:
-      - no-cache
-      Referrer-Policy:
-      - strict-origin-when-cross-origin
-      X-Frame-Options:
-      - DENY
-      X-Xss-Protection:
-      - 1; mode=block
-      X-Ratelimit-Limit:
-      - '600,30000'
-      X-Ratelimit-Usage:
-      - '4,114'
-      X-Download-Options:
-      - noopen
-      X-Content-Type-Options:
-      - nosniff
-      X-Permitted-Cross-Domain-Policies:
-      - none
-      X-Cache:
-      - Error from cloudfront
-      X-Amz-Cf-Pop:
-      - FRA2-C1
-      X-Amz-Cf-Id:
-      - iv-SP0kVXJwJiBFSn249q2G1JaaYUbgXYWL-8H21ceZco0IjhaqbhA==
-    body:
-      encoding: UTF-8
-      string: '{"message":"Forbidden","errors":[]}'
-  recorded_at: Tue, 02 Aug 2022 08:55:24 GMT
-- request:
-    method: get
-    uri: https://www.strava.com/api/v3/activities/3958491750/comments
-    body:
-      encoding: US-ASCII
-      string: ''
-    headers:
-      Authorization:
-      - Bearer access-token
-      Accept:
-      - application/json; charset=utf-8
-      User-Agent:
-      - Strava Ruby Client/0.5.0
-      Accept-Encoding:
-      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
-  response:
-    status:
-      code: 200
-      message: OK
-    headers:
-      Content-Type:
-      - application/json; charset=utf-8
-      Transfer-Encoding:
-      - chunked
-      Connection:
-      - keep-alive
-      Date:
-      - Tue, 02 Aug 2022 08:55:45 GMT
-      Via:
-      - 1.1 linkerd, 1.1 linkerd, 1.1 adb1b226e6965f6206603ba087bd4a0a.cloudfront.net
-        (CloudFront)
-      Etag:
-      - W/"d877f8f5778c9f4c7b648621554565ac"
-      Vary:
-      - Origin
-      Server:
-      - nginx/1.21.3
-      Status:
-      - 200 OK
-      X-Request-Id:
-      - b3aff1bd-1383-4f04-90aa-3dcd42e6abcc
-      Cache-Control:
-      - max-age=0, private, must-revalidate
-      Referrer-Policy:
-      - strict-origin-when-cross-origin
-      X-Frame-Options:
-      - DENY
-      X-Xss-Protection:
-      - 1; mode=block
-      X-Ratelimit-Limit:
-      - '600,30000'
-      X-Ratelimit-Usage:
-      - '7,117'
-      X-Download-Options:
-      - noopen
-      X-Content-Type-Options:
-      - nosniff
-      X-Permitted-Cross-Domain-Policies:
-      - none
-      X-Cache:
-      - Miss from cloudfront
-      X-Amz-Cf-Pop:
-      - FRA2-C1
-      X-Amz-Cf-Id:
-      - CnJFbryZXCWd2OX9SgJ6ww8rONbfVxA6aWGY8uMAD4OebeW-oVX8Zg==
-    body:
-      encoding: UTF-8
-      string: '[{"id":808412522,"activity_id":3958491750,"post_id":null,"resource_state":2,"text":"ich
-        mag Bitche","mentions_metadata":null,"created_at":"2020-08-24T12:04:23Z","athlete":{"resource_state":2,"firstname":"Dario","lastname":"S."},"reaction_count":0,"has_reacted":false},{"id":808420060,"activity_id":3958491750,"post_id":null,"resource_state":2,"text":"Wundervolle
-        Strecke! Kenne ich!","mentions_metadata":null,"created_at":"2020-08-24T12:20:20Z","athlete":{"resource_state":2,"firstname":"Bernd","lastname":"W."},"reaction_count":0,"has_reacted":false},{"id":808471991,"activity_id":3958491750,"post_id":null,"resource_state":2,"text":"Bernd
-        Wildemann wirklich ein Filetstück ❤️","mentions_metadata":null,"created_at":"2020-08-24T14:08:57Z","athlete":{"resource_state":2,"firstname":"Simon","lastname":"N."},"reaction_count":0,"has_reacted":false}]'
-  recorded_at: Tue, 02 Aug 2022 08:55:45 GMT
+  - request:
+      method: get
+      uri: https://www.strava.com/api/v3/activities/3958491750/comments
+      body:
+        encoding: US-ASCII
+        string: ""
+      headers:
+        Authorization:
+          - Bearer access-token
+        Accept:
+          - application/json; charset=utf-8
+        User-Agent:
+          - Strava Ruby Client/0.5.0
+        Accept-Encoding:
+          - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+    response:
+      status:
+        code: 200
+        message: OK
+      headers:
+        Content-Type:
+          - application/json; charset=utf-8
+        Transfer-Encoding:
+          - chunked
+        Connection:
+          - keep-alive
+        Date:
+          - Tue, 02 Aug 2022 08:55:45 GMT
+        Via:
+          - 1.1 linkerd, 1.1 linkerd, 1.1 adb1b226e6965f6206603ba087bd4a0a.cloudfront.net
+            (CloudFront)
+        Etag:
+          - W/"d877f8f5778c9f4c7b648621554565ac"
+        Vary:
+          - Origin
+        Server:
+          - nginx/1.21.3
+        Status:
+          - 200 OK
+        X-Request-Id:
+          - b3aff1bd-1383-4f04-90aa-3dcd42e6abcc
+        Cache-Control:
+          - max-age=0, private, must-revalidate
+        Referrer-Policy:
+          - strict-origin-when-cross-origin
+        X-Frame-Options:
+          - DENY
+        X-Xss-Protection:
+          - 1; mode=block
+        X-Ratelimit-Limit:
+          - "600,30000"
+        X-Ratelimit-Usage:
+          - "7,117"
+        X-Download-Options:
+          - noopen
+        X-Content-Type-Options:
+          - nosniff
+        X-Permitted-Cross-Domain-Policies:
+          - none
+        X-Cache:
+          - Miss from cloudfront
+        X-Amz-Cf-Pop:
+          - FRA2-C1
+        X-Amz-Cf-Id:
+          - CnJFbryZXCWd2OX9SgJ6ww8rONbfVxA6aWGY8uMAD4OebeW-oVX8Zg==
+      body:
+        encoding: UTF-8
+        string:
+          '[{"id":808412522,"activity_id":3958491750,"post_id":null,"resource_state":2,"text":"ich
+          mag Bitche","mentions_metadata":null,"created_at":"2020-08-24T12:04:23Z","athlete":{"resource_state":2,"firstname":"Dario","lastname":"S."},"reaction_count":0,"has_reacted":false},{"id":808420060,"activity_id":3958491750,"post_id":null,"resource_state":2,"text":"Wundervolle
+          Strecke! Kenne ich!","mentions_metadata":null,"created_at":"2020-08-24T12:20:20Z","athlete":{"resource_state":2,"firstname":"Bernd","lastname":"W."},"reaction_count":0,"has_reacted":false},{"id":808471991,"activity_id":3958491750,"post_id":null,"resource_state":2,"text":"Bernd
+          Wildemann wirklich ein Filetstück ❤️","mentions_metadata":null,"created_at":"2020-08-24T14:08:57Z","athlete":{"resource_state":2,"firstname":"Simon","lastname":"N."},"reaction_count":0,"has_reacted":false}]'
+    recorded_at: Tue, 02 Aug 2022 08:55:45 GMT
 recorded_with: VCR 6.1.0
