--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,9 +6,11 @@ jobs:
     strategy:
       matrix:
         ruby-version:
-          - "2.7"
           - "3.0"
           - "3.1"
+          - "3.2"
+          - "3.3"
+          - "jruby-9.4"
     steps:
       - uses: actions/checkout@v2
       - name: Set up Ruby
