--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,5 +1,11 @@
+inherit_from: .rubocop_todo.yml
+
+require:
+  - rubocop-rake
+  - rubocop-rspec
+
 AllCops:
-  TargetRubyVersion: 2.7
+  TargetRubyVersion: 3.0
   NewCops: enable
   Exclude:
     - vendor/**/*
@@ -26,3 +32,21 @@ Layout/LineLength:
 Style/MultilineBlockChain:
   Exclude:
     - spec/**/*
+
+RSpec/MultipleExpectations:
+  Enabled: false
+
+RSpec/SpecFilePathFormat:
+  Exclude:
+    - "spec/strava/version_spec.rb"
+    - "spec/strava/oauth/client_spec.rb"
+    - "spec/strava/oauth/config_spec.rb"
+    - "spec/strava/models/activities/ride_spec.rb"
+    - "spec/strava/models/activities/swim_spec.rb"
+    - "spec/strava/models/activities/run_spec.rb"
+
+RSpec/ExampleLength:
+  Enabled: false
+
+RSpec/DescribeClass:
+  Enabled: false
