--- a/spec/fixtures/strava/client/activity_with_ratelimit_exceeded.yml
+++ b/spec/fixtures/strava/client/activity_with_ratelimit_exceeded.yml
@@ -52,7 +52,7 @@ http_interactions:
       - 1; mode=block
     body:
       encoding: UTF-8
-      string: '{"error":"Rate Limit Exceeded","status":429,"message":"Too Many Requests"}'
+      string: '{"errors":"Rate Limit Exceeded","status":429,"message":"Too Many Requests"}'
     http_version:
   recorded_at: Sun, 25 Nov 2018 13:45:45 GMT
 recorded_with: VCR 4.0.0
