--- a/spec/fixtures/strava/client/activity_comments_page_size_3_by_2.yml
+++ b/spec/fixtures/strava/client/activity_comments_page_size_3_by_2.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: https://www.strava.com/api/v3/activities/15605032352/comments?page_size=3
+    uri: https://www.strava.com/api/v3/activities/15605032352/comments?page_size=2
     body:
       encoding: US-ASCII
       string: ''
@@ -12,7 +12,7 @@ http_interactions:
       Accept:
       - application/json; charset=utf-8
       User-Agent:
-      - Strava Ruby Client/3.0.0
+      - Strava Ruby Client/3.0.0.pre
       Accept-Encoding:
       - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
   response:
@@ -27,15 +27,15 @@ http_interactions:
       Connection:
       - keep-alive
       Date:
-      - Mon, 20 Oct 2025 16:57:07 GMT
+      - Mon, 20 Oct 2025 21:18:03 GMT
       X-Envoy-Upstream-Service-Time:
-      - '899'
+      - '96'
       Server:
       - istio-envoy
       Status:
       - 200 OK
       X-Ratelimit-Usage:
-      - '2,225'
+      - '2,235'
       X-Ratelimit-Limit:
       - '200,2000'
       Vary:
@@ -49,37 +49,36 @@ http_interactions:
       X-Xss-Protection:
       - 1; mode=block
       X-Request-Id:
-      - d24db2d6-e60a-4708-94e1-21dbedbc2b14
+      - 515d9481-96af-4ffe-8141-e3b30d308dfd
       X-Readratelimit-Limit:
       - '100,1000'
       X-Download-Options:
       - noopen
       Etag:
-      - W/"259744c12678c860f34011e9fe3f044d"
+      - W/"30aae7abb9e1b9801e05e9187f3e444b"
       X-Frame-Options:
       - DENY
       X-Readratelimit-Usage:
-      - '2,225'
+      - '2,235'
       X-Content-Type-Options:
       - nosniff
       X-Cache:
       - Miss from cloudfront
       Via:
-      - 1.1 90707ba4ec932f1b72abfb5c4f1add2e.cloudfront.net (CloudFront)
+      - 1.1 08c35fba3c05c07f78b1292e4a5f949a.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
       - JFK52-P3
       X-Amz-Cf-Id:
-      - ZUSSOBszR1KJqdobouGkGhcI8jI98cgma20TqeJuHIKPQwX6KtNfGQ==
+      - LIdm-9c6PG0CXHkjAjKiWNxon1Q7cbr1c6XIduVYrvzDMA7W-Q4kZw==
     body:
       encoding: UTF-8
       string: '[{"id":2257523290,"activity_id":15605032352,"post_id":null,"resource_state":2,"text":"you
         pass?","mentions_metadata":null,"created_at":"2025-08-27T18:36:59Z","cursor":"eyJpZCI6MjI1NzUyMzI5MCwiY3JlYXRlZEF0IjoxNzU2MzE5ODE5MDAwfQ%3D%3D","athlete":{"resource_state":2,"firstname":"Sasha","lastname":"C."},"reaction_count":0,"has_reacted":false},{"id":2257703241,"activity_id":15605032352,"post_id":null,"resource_state":2,"text":"Sasha
-        Caskey I will live another day!","mentions_metadata":null,"created_at":"2025-08-27T21:55:13Z","cursor":"eyJpZCI6MjI1NzcwMzI0MSwiY3JlYXRlZEF0IjoxNzU2MzMxNzEzMDAwfQ%3D%3D","athlete":{"resource_state":2,"firstname":"Daniel","lastname":"D."},"reaction_count":1,"has_reacted":false},{"id":2257782099,"activity_id":15605032352,"post_id":null,"resource_state":2,"text":"I
-        didn''t know they do competitive EKG Stress Test","mentions_metadata":null,"created_at":"2025-08-28T00:38:04Z","cursor":"eyJpZCI6MjI1Nzc4MjA5OSwiY3JlYXRlZEF0IjoxNzU2MzQxNDg0MDAwfQ%3D%3D","athlete":{"resource_state":2,"firstname":"Vlad","lastname":"Z."},"reaction_count":0,"has_reacted":false}]'
-  recorded_at: Mon, 20 Oct 2025 16:57:07 GMT
+        Caskey I will live another day!","mentions_metadata":null,"created_at":"2025-08-27T21:55:13Z","cursor":"eyJpZCI6MjI1NzcwMzI0MSwiY3JlYXRlZEF0IjoxNzU2MzMxNzEzMDAwfQ%3D%3D","athlete":{"resource_state":2,"firstname":"Daniel","lastname":"D."},"reaction_count":1,"has_reacted":false}]'
+  recorded_at: Mon, 20 Oct 2025 21:18:03 GMT
 - request:
     method: get
-    uri: https://www.strava.com/api/v3/activities/15605032352/comments?after_cursor=eyJpZCI6MjI1Nzc4MjA5OSwiY3JlYXRlZEF0IjoxNzU2MzQxNDg0MDAwfQ%253D%253D&page_size=3
+    uri: https://www.strava.com/api/v3/activities/15605032352/comments?after_cursor=eyJpZCI6MjI1NzcwMzI0MSwiY3JlYXRlZEF0IjoxNzU2MzMxNzEzMDAwfQ%253D%253D&page_size=2
     body:
       encoding: US-ASCII
       string: ''
@@ -89,7 +88,7 @@ http_interactions:
       Accept:
       - application/json; charset=utf-8
       User-Agent:
-      - Strava Ruby Client/3.0.0
+      - Strava Ruby Client/3.0.0.pre
       Accept-Encoding:
       - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
   response:
@@ -104,15 +103,15 @@ http_interactions:
       Connection:
       - keep-alive
       Date:
-      - Mon, 20 Oct 2025 17:02:42 GMT
+      - Mon, 20 Oct 2025 21:18:03 GMT
       X-Envoy-Upstream-Service-Time:
-      - '555'
+      - '92'
       Server:
       - istio-envoy
       Status:
       - 200 OK
       X-Ratelimit-Usage:
-      - '3,233'
+      - '3,236'
       X-Ratelimit-Limit:
       - '200,2000'
       Vary:
@@ -126,29 +125,30 @@ http_interactions:
       X-Xss-Protection:
       - 1; mode=block
       X-Request-Id:
-      - 27b7fcc2-dd5c-4d3d-a8d9-2450306ff6aa
+      - b45f4a8a-9001-4842-b4b3-856cdfaa1a4d
       X-Readratelimit-Limit:
       - '100,1000'
       X-Download-Options:
       - noopen
       Etag:
-      - W/"4f53cda18c2baa0c0354bb5f9a3ecbe5"
+      - W/"3d7e5ff05291542b5fe10dd7f4d3b113"
       X-Frame-Options:
       - DENY
       X-Readratelimit-Usage:
-      - '3,233'
+      - '3,236'
       X-Content-Type-Options:
       - nosniff
       X-Cache:
       - Miss from cloudfront
       Via:
-      - 1.1 145a3c1a881b9a37bb761d4b0890859a.cloudfront.net (CloudFront)
+      - 1.1 1f85764c0bc1f70d16858df07753dfa8.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
       - JFK52-P3
       X-Amz-Cf-Id:
-      - 8_TTRLtS7_l4Z0kNa9meul3TEDsrb1A06oqfz1AICxS-Wus2ESJByw==
+      - kfb4VQO7Eak1aHkAdSwJHe9Rf46dgfauH5g6vB3NYm1HtO-csj3OPA==
     body:
       encoding: UTF-8
-      string: "[]"
-  recorded_at: Mon, 20 Oct 2025 17:02:42 GMT
+      string: '[{"id":2257782099,"activity_id":15605032352,"post_id":null,"resource_state":2,"text":"I
+        didn''t know they do competitive EKG Stress Test","mentions_metadata":null,"created_at":"2025-08-28T00:38:04Z","cursor":"eyJpZCI6MjI1Nzc4MjA5OSwiY3JlYXRlZEF0IjoxNzU2MzQxNDg0MDAwfQ%3D%3D","athlete":{"resource_state":2,"firstname":"Vlad","lastname":"Z."},"reaction_count":0,"has_reacted":false}]'
+  recorded_at: Mon, 20 Oct 2025 21:18:03 GMT
 recorded_with: VCR 6.3.1
