--- a/spec/fixtures/strava/client/activity_comments_per_page_3_by_2.yml
+++ b/spec/fixtures/strava/client/activity_comments_per_page_3_by_2.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: https://www.strava.com/api/v3/activities/15605032352/comments?page_size=2&per_page=3
+    uri: https://www.strava.com/api/v3/activities/15605032352/comments?page=1&per_page=2
     body:
       encoding: US-ASCII
       string: ''
@@ -12,7 +12,7 @@ http_interactions:
       Accept:
       - application/json; charset=utf-8
       User-Agent:
-      - Strava Ruby Client/3.0.0
+      - Strava Ruby Client/3.0.0.pre
       Accept-Encoding:
       - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
   response:
@@ -27,15 +27,15 @@ http_interactions:
       Connection:
       - keep-alive
       Date:
-      - Mon, 20 Oct 2025 16:57:06 GMT
+      - Mon, 20 Oct 2025 21:18:03 GMT
       X-Envoy-Upstream-Service-Time:
-      - '541'
+      - '138'
       Server:
       - istio-envoy
       Status:
       - 200 OK
       X-Ratelimit-Usage:
-      - '1,224'
+      - '1,234'
       X-Ratelimit-Limit:
       - '200,2000'
       Vary:
@@ -49,7 +49,7 @@ http_interactions:
       X-Xss-Protection:
       - 1; mode=block
       X-Request-Id:
-      - cba2fcc3-8392-4d44-8b92-15b35ad60fac
+      - f8dc91fb-66c1-4626-a586-9bfb373c5525
       X-Readratelimit-Limit:
       - '100,1000'
       X-Download-Options:
@@ -59,21 +59,21 @@ http_interactions:
       X-Frame-Options:
       - DENY
       X-Readratelimit-Usage:
-      - '1,224'
+      - '1,234'
       X-Content-Type-Options:
       - nosniff
       X-Cache:
       - Miss from cloudfront
       Via:
-      - 1.1 932eefec422d884c28f3c110319f29fe.cloudfront.net (CloudFront)
+      - 1.1 e3d2c542026df7b9357e3b591c889f64.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
       - JFK52-P3
       X-Amz-Cf-Id:
-      - oIYXaqV2H5kItzgZQ4Q_TcsuwYCN0WV5dLh0NeaBcdursqz87YOh4g==
+      - Tft5lLCJC-9h-txaGxrQvt9zLDZfa479Fp_sYsMANB9lD0kwa4_DIA==
     body:
       encoding: UTF-8
       string: '[{"id":2257523290,"activity_id":15605032352,"post_id":null,"resource_state":2,"text":"you
         pass?","mentions_metadata":null,"created_at":"2025-08-27T18:36:59Z","cursor":"eyJpZCI6MjI1NzUyMzI5MCwiY3JlYXRlZEF0IjoxNzU2MzE5ODE5MDAwfQ%3D%3D","athlete":{"resource_state":2,"firstname":"Sasha","lastname":"C."},"reaction_count":0,"has_reacted":false},{"id":2257703241,"activity_id":15605032352,"post_id":null,"resource_state":2,"text":"Sasha
         Caskey I will live another day!","mentions_metadata":null,"created_at":"2025-08-27T21:55:13Z","cursor":"eyJpZCI6MjI1NzcwMzI0MSwiY3JlYXRlZEF0IjoxNzU2MzMxNzEzMDAwfQ%3D%3D","athlete":{"resource_state":2,"firstname":"Daniel","lastname":"D."},"reaction_count":1,"has_reacted":false}]'
-  recorded_at: Mon, 20 Oct 2025 16:57:06 GMT
+  recorded_at: Mon, 20 Oct 2025 21:18:03 GMT
 recorded_with: VCR 6.3.1
